--- a/src/Components/Content.scss
+++ b/src/Components/Content.scss
@@ -8,6 +8,9 @@
         width: 87%;
         margin: 0 auto;
         justify-content: space-between;
+        @media (max-width: 1600px){
+            width: 95%;
+        }
         div{
             display: flex;
             align-items: center;
@@ -45,6 +48,11 @@
                 padding-right: 10%;
                 margin-right: 9%;
             }
+            h6{
+                width: 150px;
+                font-weight: 300;
+                font-size: 16px;
+            }
             div:nth-child(2){
                 width: 100%;
                 img{
@@ -59,9 +67,12 @@
     .Overview-elements{
         display: flex;
         justify-content: space-around;
-        width: 94%;
+        width: 91%;
         margin: 0 auto;
         padding: 1.2% 0 1.2% 0;
+        @media (max-width: 1600px){
+            width: 98%;
+        }
         .Rankings{
             background-color: white;
             border-radius: 2%;
@@ -69,6 +80,12 @@
             height: 290px;
             overflow: hidden;
             box-shadow: 1px 2px 1px 1px #ebebeb;
+            @media (max-width: 1600px){
+                width: 48%;
+            }
+            @media (max-width: 1366px){
+                height: 270px;
+            }            
             span{
                 display: block;
                 padding: 3% 0 1.5% 2.5%;
@@ -87,6 +104,9 @@
             border-radius: 2%;
             overflow: hidden;
             box-shadow: 1px 2px 1px 1px #ebebeb;
+            @media (max-width: 1600px){
+                width: 48%;
+            }
             .topic{
                 display: block;
                 padding: 3% 0 1.5% 2.5%;
@@ -103,6 +123,14 @@
                 font-family: 'Mulish', sans-serif;
                 text-align: center;
                 white-space: pre-wrap;
+                @media (max-width: 1600px){
+                    width: 68%;
+                    font-size: 1.5em;
+                }
+                @media (max-width: 1366px){
+                    font-size: 1.4em;
+                    width: 72%;
+                }
                 span{
                     font-weight: 800;
                     margin: 8px;
@@ -164,14 +192,22 @@
         margin: 0 auto;
         box-shadow: 1px 2px 1px 1px #ebebeb;
         font-family: 'Mulish', sans-serif;
+        @media (max-width: 1600px){
+            width: 91%;
+        }
         .map_model{
             position: absolute;
             background-color: white;
             width: 34%;
-            top: 10%;
+            top: 8%;
             left: 10%;
             z-index: 9999;
             transition:visibility 0.1s linear,opacity 0.3s linear;
+            @media (max-width: 1600px){
+                width: 36.5%;
+                top: 4%;
+                left: 8%; 
+            }
             header{
                 display: flex;
                 justify-content: space-between;
@@ -195,6 +231,15 @@
             }
             .score{
                 margin-bottom: 4%;
+                .city_score{
+                    height: 100px;
+                    &:after{
+                        margin-top: 100px;
+                    }
+                    .color_point{
+                        margin-top: 31px;
+                    }
+                }
                 .numb_score{
                     display: flex;
                     flex-direction: column;
@@ -214,6 +259,9 @@
                 width: 90%;
                 margin: 0 auto;
                 height: 300px;
+                @media (max-width: 1600px){
+                    height: 270px;
+                }
                 .stat_elem{
                     display: flex;
                     align-items: center;
@@ -223,6 +271,10 @@
                     img{
                         width: 22px;
                         height: 22px;
+                        @media (max-width: 1600px){
+                            width: 18px;
+                            height: 18px;    
+                        }
                     }
                     div{
                         display: flex;
@@ -230,8 +282,12 @@
                             background-color: rgba(113, 59, 219, 0.12);
                             border-radius: 50%;
                             border: 14px solid #ECE7FA;
+                            @media (max-width: 1600px){
+                                border: 10px solid #ECE7FA;
+                            }        
                         }
                         &:nth-child(2){
+                            width: 90px;
                             margin-right: 3%;
                             margin-left: 3%;
                             flex-shrink: 0;
@@ -250,10 +306,16 @@
                                 font-size: 20px;
                                 font-weight: bold;
                                 margin-bottom: 4%;
+                                @media (max-width: 1600px){
+                                    font-size: 17px;
+                                }
                             }
                             &:nth-child(2){
                                 font-size: 14px;
                                 color: #A6ACBE;
+                                @media (max-width: 1600px){
+                                    font-size: 12px;
+                                }
                             }
                         }
                     }
@@ -273,7 +335,10 @@
         .score_elem{
             margin-left: 40px;
             &:nth-child(2){
-                margin-left: 240px;
+                margin-left: 220px;
+                @media (max-width: 1366px){
+                    margin-left: 190px;
+                }
             }
             .city_score{
                 background-image: linear-gradient(to bottom, #6bd16f, #88d66f, #a1da71, #b8de75, #cde27b, #dada71, #e6d26b, #f1c967, #f8b159, #fd9753, #fe7c56, #fb5f5f);
@@ -281,6 +346,9 @@
                 width: 15px;
                 display: flex;
                 justify-content: center;
+                @media (max-width: 1600px){
+                    height: 100px;
+                }
                 &:before, &:after{
                     content: '';
                     position: absolute;
@@ -299,6 +367,9 @@
                     background-color: #fb5f5f;
                     border-bottom-left-radius : 50%;
                     border-bottom-right-radius : 50%; 
+                    @media (max-width: 1600px){
+                        margin-top: 100px;
+                    }                    
                 }
                 .score_point{
                     position: relative;
@@ -328,6 +399,9 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    @media (max-width: 1600px){
+                        margin-top: 30px;
+                    }
                     .line-between{
                         position: absolute;
                         right: 38px;
