--- a/src/Components/Content.scss
+++ b/src/Components/Content.scss
@@ -46,20 +46,42 @@
         }
         .user-field{
             justify-content: space-between;
-            width: 18%;
+            width: 22%;
             @media (max-width: 1600px){
-                width: 20%;
+                width: 23.8%;
             }
             @media (max-width: 1366px){
-                width: 23%;
+                width: 27%;
             }
             .notifications_search{
+                width: 30%;
                 border-right: 1px solid rgb(218, 218, 218);
-                padding-right: 10%;
+                height: 30px;
+                padding-right: 12%;
                 margin-right: 9%;
                 @media (max-width: 1600px){
                     padding-right: 10%;
                     margin-right: 7%;
+                }
+                .bell{
+                    &:after{
+                        position: absolute;
+                        margin-bottom: 9px;
+                        margin-left: 11px;
+                        border-left: 1px solid white;
+                        border-bottom: 1px solid white;
+                        padding: 2px;
+                        z-index: 9999;
+                        content: "";
+                        width: 3px;
+                        height: 3px;
+                        border-radius: 50%;
+                        background-color: #3751FF;
+                    }
+                }
+                img{
+                    width: 15px;
+                    margin: 32%;
                 }
             }
             h6{
@@ -67,7 +89,7 @@
                 font-weight: 300;
                 font-size: 16px;
             }
-            div:nth-child(2){
+            .profile:nth-child(2){
                 width: 100%;
                 img{
                     border-radius: 50%;
